--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "smashin-coin",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "crypto-js": "^4.0.0"
-  }
+	"name": "simple-coin",
+	"version": "1.0.0",
+	"description": "",
+	"keywords": [],
+	"license": "MIT",
+	"author": "S. Mahdi Mir-Ismaili <s.m.mirismaili@gmail.com>",
+	"type": "module",
+	"main": "index.js",
+	"scripts": {
+		"start": "node --experimental-specifier-resolution=node index.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"engines": {
+		"node": ">=14"
+	}
 }
